force-app/main/default/objects/Contract_Request__c/fields/Expense_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Expense_Reimbursement__c</fullName>
    <label>Expense Reimbursement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes + Premium</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>