force-app/main/default/objects/Contract_Request__c/fields/Extended_Software_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Extended_Software_Maintenance__c</fullName>
    <label>Extended Software Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>