force-app/main/default/objects/Contract_Request__c/fields/Financial_Approver__c.field-meta.xml
<CustomField>
    <fullName>Financial_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N50000001fRQMEA2</relationshipName>
    <type>Lookup</type>
</CustomField>