force-app/main/default/objects/Contract_Request__c/fields/Financial_Hold__c.field-meta.xml
<CustomField>
    <fullName>Financial_Hold__c</fullName>
    <inlineHelpText>Date the contract went into Financial Hold</inlineHelpText>
    <label>Financial Hold</label>
    <type>Date</type>
</CustomField>