force-app/main/default/objects/Contract_Request__c/fields/Fleet_Right_Sizing__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Right_Sizing__c</fullName>
    <label>Fleet Right-Sizing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>