force-app/main/default/objects/Contract_Request__c/fields/FRA_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>FRA_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FRA Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>