force-app/main/default/objects/Contract_Request__c/fields/FRA_Product__c.field-meta.xml
<CustomField>
    <fullName>FRA_Product__c</fullName>
    <label>FRA Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driving Center Platform</fullName>
            </value>
            <value>
                <fullName>Fatigue Risk Model</fullName>
            </value>
            <value>
                <fullName>Safety Model: Driving</fullName>
            </value>
            <value>
                <fullName>Safety Model: Workers Comp</fullName>
            </value>
            <value>
                <fullName>Driver Recruiting Model</fullName>
            </value>
            <value>
                <fullName>Driver Retention Model</fullName>
            </value>
            <value>
                <fullName>IS: Fatigue Model</fullName>
            </value>
            <value>
                <fullName>IS: Safety Model Driving</fullName>
            </value>
            <value>
                <fullName>IS: Safety Model Worker Comp</fullName>
            </value>
            <value>
                <fullName>IS: Driver Recruiting</fullName>
            </value>
            <value>
                <fullName>IS: Driver Retention</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Content Development: External</fullName>
            </value>
            <value>
                <fullName>Content Development: Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>