force-app/main/default/objects/Contract_Request__c/fields/Free_Messaging__c.field-meta.xml
<CustomField>
    <fullName>Free_Messaging__c</fullName>
    <label>Service Plan and Discount Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>