force-app/main/default/objects/Contract_Request__c/fields/Future_Hardware_Purchase_Credit__c.field-meta.xml
<CustomField>
    <fullName>Future_Hardware_Purchase_Credit__c</fullName>
    <label>Future Hardware Purchase Credit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OT_OE_Retention_Toolkit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>1%</fullName>
            </value>
            <value>
                <fullName>2%</fullName>
            </value>
            <value>
                <fullName>3%</fullName>
            </value>
            <value>
                <fullName>4%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>6%</fullName>
            </value>
            <value>
                <fullName>7%</fullName>
            </value>
            <value>
                <fullName>8%</fullName>
            </value>
            <value>
                <fullName>9%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>