force-app/main/default/objects/Contract_Request__c/fields/General_Letter_Content__c.field-meta.xml
<CustomField>
    <fullName>General_Letter_Content__c</fullName>
    <label>General Letter Content</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>