force-app/main/default/objects/Contract_Request__c/fields/GT_Reporting_Interval__c.field-meta.xml
<CustomField>
    <fullName>GT_Reporting_Interval__c</fullName>
    <label>GT Reporting Interval</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>