force-app/main/default/objects/Contract_Request__c/fields/Hardware_Repair_Discount__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Repair_Discount__c</fullName>
    <label>Hardware Repair Discount %</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OT_OE_Retention_Toolkit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>1%</fullName>
            </value>
            <value>
                <fullName>2%</fullName>
            </value>
            <value>
                <fullName>3%</fullName>
            </value>
            <value>
                <fullName>4%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>6%</fullName>
            </value>
            <value>
                <fullName>7%</fullName>
            </value>
            <value>
                <fullName>8%</fullName>
            </value>
            <value>
                <fullName>9%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>11%</fullName>
            </value>
            <value>
                <fullName>12%</fullName>
            </value>
            <value>
                <fullName>13%</fullName>
            </value>
            <value>
                <fullName>14%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>16%</fullName>
            </value>
            <value>
                <fullName>17%</fullName>
            </value>
            <value>
                <fullName>18%</fullName>
            </value>
            <value>
                <fullName>19%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>