force-app/main/default/objects/Contract_Request__c/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Contract Request is a high priority.</description>
    <inlineHelpText>Check this box if High Priority Request.</inlineHelpText>
    <label>High Priority</label>
    <type>Checkbox</type>
</CustomField>