force-app/main/default/objects/Contract_Request__c/fields/Hold_Needs_Approval__c.field-meta.xml
<CustomField>
    <fullName>Hold_Needs_Approval__c</fullName>
    <label>Hold: Needs Approval</label>
    <type>Date</type>
</CustomField>