force-app/main/default/objects/Contract_Request__c/fields/Hold_See_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hold_See_Notes__c</fullName>
    <label>Hold: See Notes</label>
    <type>Date</type>
</CustomField>