force-app/main/default/objects/Contract_Request__c/fields/ICC_I_E_S_Access_Service__c.field-meta.xml
<CustomField>
    <fullName>ICC_I_E_S_Access_Service__c</fullName>
    <label>ICC/I.E.S. Access Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>