force-app/main/default/objects/Contract_Request__c/fields/In_Service__c.field-meta.xml
<CustomField>
    <fullName>In_Service__c</fullName>
    <label>In-Service</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>