force-app/main/default/objects/Contract_Request__c/fields/Installation_Discount_Detail__c.field-meta.xml
<CustomField>
    <fullName>Installation_Discount_Detail__c</fullName>
    <label>Installer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Center_Installation_Discount__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Service Center</fullName>
            </value>
            <value>
                <fullName>Qualcomm</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>