force-app/main/default/objects/Contract_Request__c/fields/Installation_Training__c.field-meta.xml
<CustomField>
    <fullName>Installation_Training__c</fullName>
    <label>Installation Training</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>