force-app/main/default/objects/Contract_Request__c/fields/Length_of_Evaluation_Period__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Evaluation_Period__c</fullName>
    <inlineHelpText>Longer than 90 days requires approval.</inlineHelpText>
    <label>Evaluation Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>