force-app/main/default/objects/Contract_Request__c/fields/Length_of_Term__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Term__c</fullName>
    <inlineHelpText>1. Measured from signature date. 
2. OmniTRACS and OmniExpress term length can&apos;t exceed 03.31.2015</inlineHelpText>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>4 years</fullName>
            </value>
            <value>
                <fullName>5 years</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>December 31, 2014</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>