force-app/main/default/objects/Contract_Request__c/fields/Length_of_Term_Extension__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Term_Extension__c</fullName>
    <label>Length of Term Extension</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Plan__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>One Year</fullName>
            </value>
            <value>
                <fullName>Two Years</fullName>
            </value>
            <value>
                <fullName>Three Years</fullName>
            </value>
            <value>
                <fullName>Five Years</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>