force-app/main/default/objects/Contract_Request__c/fields/Letter_Type__c.field-meta.xml
<CustomField>
    <fullName>Letter_Type__c</fullName>
    <label>Letter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Termination</fullName>
            </value>
            <value>
                <fullName>Standard Termination</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>One-Time Credit</fullName>
            </value>
            <value>
                <fullName>Recurring Discount/Credit</fullName>
            </value>
            <value>
                <fullName>Settlement Agreement Other</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>