force-app/main/default/objects/Contract_Request__c/fields/List_any_Affiliates__c.field-meta.xml
<CustomField>
    <fullName>List_any_Affiliates__c</fullName>
    <label>List any Affiliates</label>
    <type>TextArea</type>
</CustomField>