force-app/main/default/objects/Contract_Request__c/fields/Maximum_Charge__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Charge__c</fullName>
    <label>Maximum Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>