force-app/main/default/objects/Contract_Request__c/fields/Method_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Shipment__c</fullName>
    <label>Method of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ground Shipping (5-7 days)</fullName>
            </value>
            <value>
                <fullName>2 Business Days</fullName>
            </value>
            <value>
                <fullName>Next Business Day - A.M. Delivery</fullName>
            </value>
            <value>
                <fullName>Next Business Day - P.M. Delivery</fullName>
            </value>
            <value>
                <fullName>Customer Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>