force-app/main/default/objects/Contract_Request__c/fields/Monthly_Charges_Discount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Charges_Discount__c</fullName>
    <inlineHelpText>See current policy for Customers paying more than $50.00 per month</inlineHelpText>
    <label>Monthly Charges Discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.5%</fullName>
            </value>
            <value>
                <fullName>1.0%</fullName>
            </value>
            <value>
                <fullName>1.5%</fullName>
            </value>
            <value>
                <fullName>2.0%</fullName>
            </value>
            <value>
                <fullName>2.5%</fullName>
            </value>
            <value>
                <fullName>3.0%</fullName>
            </value>
            <value>
                <fullName>3.5%</fullName>
            </value>
            <value>
                <fullName>4.0%</fullName>
            </value>
            <value>
                <fullName>4.5%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>