force-app/main/default/objects/Contract_Request__c/fields/Mounts__c.field-meta.xml
<CustomField>
    <fullName>Mounts__c</fullName>
    <label>Mounts</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>