force-app/main/default/objects/Contract_Request__c/fields/Mounts_Brackets_at_No_Charge__c.field-meta.xml
<CustomField>
    <fullName>Mounts_Brackets_at_No_Charge__c</fullName>
    <description>Number of Mounts/Brackets at No Charge</description>
    <label># Mounts/Brackets at No Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>