force-app/main/default/objects/Contract_Request__c/fields/NMC_Account_Information__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account_Information__c</fullName>
    <label>NMC Account Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New/Current Customer - Needs New NMC Account Setup</fullName>
            </value>
            <value>
                <fullName>New/Current Customer - Needs Test NMC Account Setup</fullName>
            </value>
            <value>
                <fullName>Current Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>