force-app/main/default/objects/Contract_Request__c/fields/NMC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NMC Account Number</label>
    <referenceTo>NMC_Account__c</referenceTo>
    <relationshipLabel>Contract Requests</relationshipLabel>
    <relationshipName>R00N50000001tCSHEA2</relationshipName>
    <type>Lookup</type>
</CustomField>