force-app/main/default/objects/Contract_Request__c/fields/No_Approvals_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Approvals_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked proceed to next section.</inlineHelpText>
    <label>No Approvals Required</label>
    <type>Checkbox</type>
</CustomField>