force-app/main/default/objects/Contract_Request__c/fields/No_Approver__c.field-meta.xml
<CustomField>
    <fullName>No_Approver__c</fullName>
    <formula>IF(AND( Sales_Mgmt_Approver__c =&quot;&quot; , Financial_Approver__c =&quot;&quot;,  Prod_Mgmt_Approver__c  =&quot;&quot;, Other_Approver__c = &quot;&quot;), &quot;YES&quot;,&quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No_Approver</label>
    <type>Text</type>
</CustomField>