force-app/main/default/objects/Contract_Request__c/fields/Non_Standard_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Terms__c</fullName>
    <inlineHelpText>Negotiated legal terms</inlineHelpText>
    <label>Non-Standard Terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>