force-app/main/default/objects/Contract_Request__c/fields/NRF__c.field-meta.xml
<CustomField>
    <fullName>NRF__c</fullName>
    <inlineHelpText>Network Reservation Fee</inlineHelpText>
    <label>NRF</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>$15.00</fullName>
                <default>true</default>
                <label>$15.00</label>
            </value>
            <value>
                <fullName>$14.00</fullName>
            </value>
            <value>
                <fullName>$13.00</fullName>
            </value>
            <value>
                <fullName>$12.00</fullName>
            </value>
            <value>
                <fullName>$11.00</fullName>
            </value>
            <value>
                <fullName>$10.00</fullName>
            </value>
            <value>
                <fullName>$9.00</fullName>
            </value>
            <value>
                <fullName>$8.00</fullName>
            </value>
            <value>
                <fullName>$7.00</fullName>
            </value>
            <value>
                <fullName>$6.00</fullName>
            </value>
            <value>
                <fullName>$5.00</fullName>
            </value>
            <value>
                <fullName>$4.00</fullName>
            </value>
            <value>
                <fullName>$3.00</fullName>
            </value>
            <value>
                <fullName>$2.00</fullName>
            </value>
            <value>
                <fullName>$1.00</fullName>
            </value>
            <value>
                <fullName>$0.00</fullName>
            </value>
            <value>
                <fullName>$0</fullName>
            </value>
            <value>
                <fullName>$1</fullName>
            </value>
            <value>
                <fullName>$2</fullName>
            </value>
            <value>
                <fullName>$3</fullName>
            </value>
            <value>
                <fullName>$4</fullName>
            </value>
            <value>
                <fullName>$5</fullName>
            </value>
            <value>
                <fullName>$6</fullName>
            </value>
            <value>
                <fullName>$7</fullName>
            </value>
            <value>
                <fullName>$8</fullName>
            </value>
            <value>
                <fullName>$9</fullName>
            </value>
            <value>
                <fullName>$10</fullName>
            </value>
            <value>
                <fullName>$11</fullName>
            </value>
            <value>
                <fullName>$12</fullName>
            </value>
            <value>
                <fullName>$13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>