force-app/main/default/objects/Contract_Request__c/fields/of_Beta_Products__c.field-meta.xml
<CustomField>
    <fullName>of_Beta_Products__c</fullName>
    <inlineHelpText>If Applicable</inlineHelpText>
    <label># of Beta Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>