force-app/main/default/objects/Contract_Request__c/fields/Off_hours_discount__c.field-meta.xml
<CustomField>
    <fullName>Off_hours_discount__c</fullName>
    <label>Off-hours discount</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>