force-app/main/default/objects/Contract_Request__c/fields/Off_Hours_Discount_percent__c.field-meta.xml
<CustomField>
    <fullName>Off_Hours_Discount_percent__c</fullName>
    <label>Off-Hours Discount %</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>35%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>45%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>