force-app/main/default/objects/Contract_Request__c/fields/One_Free_Drivers_Dispatchers_Training__c.field-meta.xml
<CustomField>
    <fullName>One_Free_Drivers_Dispatchers_Training__c</fullName>
    <label>One Free Drivers/Dispatchers Training</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>