force-app/main/default/objects/Contract_Request__c/fields/Optional_Services__c.field-meta.xml
<CustomField>
    <fullName>Optional_Services__c</fullName>
    <label>Optional Services</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Connection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated CI</fullName>
            </value>
            <value>
                <fullName>PPP Dial Back-up Direct Dial Number Service</fullName>
            </value>
            <value>
                <fullName>PPP Dial-Up</fullName>
            </value>
            <value>
                <fullName>Asynchronous Dial-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>