force-app/main/default/objects/Contract_Request__c/fields/OT_OE_Retention_Toolkit__c.field-meta.xml
<CustomField>
    <fullName>OT_OE_Retention_Toolkit__c</fullName>
    <label>OT/OE Retention Toolkit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>