force-app/main/default/objects/Contract_Request__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>