force-app/main/default/objects/Contract_Request__c/fields/Other_Agreement_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Agreement_Terms__c</fullName>
    <label>Other Agreement Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>