force-app/main/default/objects/Contract_Request__c/fields/Other_Applications__c.field-meta.xml
<CustomField>
    <fullName>Other_Applications__c</fullName>
    <label>Other Applications</label>
    <type>TextArea</type>
</CustomField>