force-app/main/default/objects/Contract_Request__c/fields/Other_Approver__c.field-meta.xml
<CustomField>
    <fullName>Other_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>