force-app/main/default/objects/Contract_Request__c/fields/Other_Compensation_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Compensation_Details__c</fullName>
    <label>Other Compensation Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>