force-app/main/default/objects/Contract_Request__c/fields/Other_Connection_Type_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Connection_Type_Details__c</fullName>
    <label>Other Connection Type &amp; Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>